// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/AspectRatio handles 0 value 1`] = `null`;

exports[`Styles/AspectRatio handles positive value 1`] = `
{
  "classNames": "root",
  "variables": {
    "--_uic-ar": 0.5,
  },
}
`;

exports[`Styles/AspectRatio handles responsive value 1`] = `
{
  "classNames": "root",
  "variables": {
    "--_uic-ar": 4,
    "--_uic-ar-l": 2,
    "--_uic-ar-m": 0,
  },
}
`;

exports[`Styles/AspectRatio handles undefined value 1`] = `null`;
